Fixes z-index issue with nav overlay

--- a/less/theme.less
+++ b/less/theme.less
@@ -143,7 +143,7 @@ body {
 */
 	background-color: @color-swatch7;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 
     // Container
 
